@@ -1,3 +1,9 @@
+2002-10-10  Morten Welinder  <terra@diku.dk>
+
+	* src/rangefunc.c (product_helper): New function.
+	(range_geometric_mean): Improve precision.
+	(range_product): Improve precision.
+
 2002-10-10  Andreas J. Guelzow
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=95333
