@@ -41,6 +41,7 @@ Morten:
 	* Fix --geometry, I hope.
 	* Start handling invalid (== non-utf8) file names.
 	* Fix minor leak in excel loader.
+	* Improve precision of GEOMEAN and PRODUCT.
 
 dorami@bu.iij4u.or.jp:
 	* Add InputMethod support for better international key support
